--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="about us">
   <title>About</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
+  <link rel="shortcut icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="shortcut icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+  <link rel="manifest" href="../images/site.webmanifest">
+  <link rel="mask-icon" href="../images/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="stylesheet" href="../styles/main.css">
+
 </head>
 
 <body>
@@ -22,10 +33,10 @@
 
   <main>
     <h1>About</h1>
-    <img srcset="../images/staring-squirrel-300w.jpg 300w,
-                 ../images/staring-squirrel-600w.jpg 600w,
-                 ../images/staring-squirrel-900w.jpg 900w" sizes="50vw" src="../images/staring-squirrel-600w.jpg"
-      alt="a brown squirrel on a black background" height="600" width="600">
+    <img srcset="../images/Unicycle-300w.jpg 300w,
+                 ../images/Unicycle-600w.jpg 600w,
+                 ../images/Unicycle-900w.jpg 900w" sizes="50vw" src="../images/Unicycle-600w.jpg"
+      alt="Matthew Bingham riding a unicyle down the street in front of his home" height="600" width="600">
   </main>
 </body>
 
