added width and height

--- a/about/index.html
+++ b/about/index.html
@@ -33,9 +33,9 @@
 
   <main>
     <h1>About</h1>
-    <img srcset="../images/Unicycle-300w.jpg 300w,
-                 ../images/Unicycle-600w.jpg 600w,
-                 ../images/Unicycle-900w.jpg 900w" sizes="50vw" src="../images/Unicycle-600w.jpg"
+    <img srcset="../images/unicycle-300w.jpg 300w,
+                 ../images/unicycle-600w.jpg 600w,
+                 ../images/unicycle-900w.jpg 900w" sizes="50vw" src="../images/unicycle-600w.jpg"
       alt="Matthew Bingham riding a unicyle down the street in front of his home" height="600" width="600">
   </main>
 </body>
