--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body>
   <picture>
-    <source media="(min-width: 769px)" srcset="images/Hero-Family-photo-1920w.jpg">
-    <source media="(min-width: 381px)" srcset="images/Hero-Family-photo-768w.jpg">
-    <source media="(max-width: 380px)" srcset="images/Hero-Family-photo-380w.jpg">
+    <source media="(min-width: 769px)" srcset="images/hero-family-photo-1920w.jpg" width="1920" height="1280">
+    <source media="(min-width: 381px)" srcset="images/hero-family-photo-768w.jpg" width="768" height="512">
+    <source media="(max-width: 380px)" srcset="images/hero-family-photo-380w.jpg" width="380" height="253">
     <img src="images/Hero-Family-photo-768w.jpg"
       alt="A family picture with Matthew Bingham, his parents, and two Sisters">
   </picture>
@@ -57,9 +57,9 @@
   <main>
     <h1>All About Me</h1>
     <figure>
-      <img srcset="../images/mb-300w.jpg 300w,
-                 ../images/mb-600w.jpg 600w,
-                 ../images/mb-900w.jpg 900w" sizes="50vw" src="../images/mb-600w.jpg"
+      <img srcset="images/mb-300w.jpg 300w,
+                 images/mb-600w.jpg 600w,
+                 images/mb-900w.jpg 900w" sizes="50vw" src="images/mb-600w.jpg"
         alt="A Recent Headshot of Matthew Bingham" height="600" width="600">
       <figcaption>August 2022; Starting BYU</figcaption>
     </figure>
@@ -80,9 +80,6 @@
   <footer>
     <p>Matthew Bingham &copy; 2022</p>
   </footer>
-  <main>
-    <h1>Squirrels are your friends</h1>
-  </main>
 </body>
 
 </html>
