--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
     </nav>
   </header>
   <h1>Contact</h1>
-  <img src="../images/bicycle.svg" alt="A man riding a bicycle">
+  <img src="images/bicycle.svg" alt="A man riding a bicycle">
 </body>
 
 </html>
