lowercase image paths and img width and height

--- a/about/index.html
+++ b/about/index.html
@@ -35,8 +35,8 @@
     <h1>About</h1>
     <img srcset="../images/unicycle-300w.jpg 300w,
                  ../images/unicycle-600w.jpg 600w,
-                 ../images/unicycle-900w.jpg 900w" sizes="50vw" src="../images/unicycle-600w.jpg"
-      alt="Matthew Bingham riding a unicyle down the street in front of his home" height="600" width="600">
+                 ../images/unicycle-900w.jpg 900w" sizes="50vw" src="../images/unicycle-600w.jpg" height="600"
+      width="600" alt="Matthew Bingham riding a unicyle down the street in front of his home">
   </main>
 </body>
 
