--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body>
   <picture>
-    <source media="(min-width: 769px)" srcset="images/hero-family-photo-1920w.jpg" width="1920" height="1280">
-    <source media="(min-width: 381px)" srcset="images/hero-family-photo-768w.jpg" width="768" height="512">
-    <source media="(max-width: 380px)" srcset="images/hero-family-photo-380w.jpg" width="380" height="253">
+    <source media="(min-width: 769px)" srcset="images/hero-family-photo-1920w.jpg">
+    <source media="(min-width: 381px)" srcset="images/hero-family-photo-768w.jpg">
+    <source media="(max-width: 380px)" srcset="images/hero-family-photo-380w.jpg">
     <img src="images/hero-family-photo-768w.jpg"
       alt="A family picture with Matthew Bingham, his parents, and two Sisters">
   </picture>
@@ -42,16 +42,16 @@
         <li><a href="contact/">Contact</a></li>
       </ul>
     </nav>
-    <symbol><svg> viewbox "0 0 60 60" width="300" height="300"
-        <circle cx="60" cy="60" r="60" fill="red" />
-        <circle cx="60" cy="60" r="50" fill="white" />
-        <circle cx="60" cy="60" r="40" fill="red" />
-        <circle cx="60" cy="60" r="30" fill="white" />
-        <circle cx="60" cy="60" r="20" fill="red" />
-        <circle cx="60" cy="60" r="10" fill="white" />
-      </svg>
-    </symbol>
   </header>
+  <symbol><svg> viewbox "0 0 60 60" width="300" height="300"
+      <circle cx="60" cy="60" r="60" fill="red" />
+      <circle cx="60" cy="60" r="50" fill="white" />
+      <circle cx="60" cy="60" r="40" fill="red" />
+      <circle cx="60" cy="60" r="30" fill="white" />
+      <circle cx="60" cy="60" r="20" fill="red" />
+      <circle cx="60" cy="60" r="10" fill="white" />
+    </svg>
+  </symbol>
 
   <!-- copy your main, aside, and footer from your previous assignment here -->
   <main>
