wrapped svg in picture tags

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
     <img src="images/hero-family-photo-768w.jpg"
       alt="A family picture with Matthew Bingham, his parents, and two Sisters">
   </picture>
+  <picture>
+    <symbol><svg> viewbox "0 0 60 60" width="300" height="300"
+        <circle cx="60" cy="60" r="60" fill="red" />
+        <circle cx="60" cy="60" r="50" fill="white" />
+        <circle cx="60" cy="60" r="40" fill="red" />
+        <circle cx="60" cy="60" r="30" fill="white" />
+        <circle cx="60" cy="60" r="20" fill="red" />
+        <circle cx="60" cy="60" r="10" fill="white" />
+      </svg>
+    </symbol>
+  </picture>
   <header>
     <nav>
       <ul>
@@ -67,14 +78,5 @@
     <p>Matthew Bingham &copy; 2022</p>
   </footer>
 </body>
-<symbol><svg> viewbox "0 0 60 60" width="300" height="300"
-    <circle cx="60" cy="60" r="60" fill="red" />
-    <circle cx="60" cy="60" r="50" fill="white" />
-    <circle cx="60" cy="60" r="40" fill="red" />
-    <circle cx="60" cy="60" r="30" fill="white" />
-    <circle cx="60" cy="60" r="20" fill="red" />
-    <circle cx="60" cy="60" r="10" fill="white" />
-  </svg>
-</symbol>
 
 </html>
