--- a/index.html
+++ b/index.html
@@ -73,15 +73,13 @@
 </body>
 
 <svg>
-  <symbol id="target" viewbox "0 0 60 60">
-    <g>
-      <circle cx="60" cy="60" r="60" fill="red" />
-      <circle cx="60" cy="60" r="50" fill="white" />
-      <circle cx="60" cy="60" r="40" fill="red" />
-      <circle cx="60" cy="60" r="30" fill="white" />
-      <circle cx="60" cy="60" r="20" fill="red" />
-      <circle cx="60" cy="60" r="10" fill="white" />
-    </g>
+  <symbol id="target" viewbox="0 0 120 120">
+    <circle cx="60" cy="60" r="60" fill="red" />
+    <circle cx="60" cy="60" r="50" fill="white" />
+    <circle cx="60" cy="60" r="40" fill="red" />
+    <circle cx="60" cy="60" r="30" fill="white" />
+    <circle cx="60" cy="60" r="20" fill="red" />
+    <circle cx="60" cy="60" r="10" fill="white" />
   </symbol>
 </svg>
 
