--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 
 <body>
   <picture>
-    <source media="(min-width: 769px)" srcset="images/hero-sunrise-1920w.jpg">
-    <source media="(min-width: 381px)" srcset="images/hero-sunrise-photo-768w.jpg">
-    <source media="(max-width: 380px)" srcset="images/hero-sunrise-photo-380w.jpg">
-    <img src="images/hero-sunrise-photo-768w.jpg"
-      alt="A family picture with Matthew Bingham, his parents, and two Sisters">
+    <source media="(min-width: 769px)" srcset="images/hero-sunrise-1920.jpg">
+    <source media="(min-width: 381px)" srcset="images/hero-sunrise-768.jpg">
+    <source media="(max-width: 380px)" srcset="images/hero-sunrise-380.jpg">
+    <img src="images/hero-sunrise-768.jpg" alt="A family picture with Matthew Bingham, his parents, and two Sisters">
   </picture>
 
   <header>
